--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="css/index.css">
   <script src="js/script.js" defer></script>
+  <script src="js/cart.js" type="module"></script>
 
   <title>CMS</title>
 </head>
